--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "@mui/material": "^6.1.6",
     "@reduxjs/toolkit": "^2.3.0",
     "axios": "^1.7.7",
+    "date-fns": "^4.1.0",
+    "dompurify": "^3.1.7",
     "lucide-react": "^0.454.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
+    "react-quill": "^2.0.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
     "redux": "^5.0.1",
