--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.7.7",
     "date-fns": "^4.1.0",
     "dompurify": "^3.1.7",
+    "formik": "^2.4.6",
     "lucide-react": "^0.454.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -26,7 +27,8 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
     "redux": "^5.0.1",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
